--- a/css/header.css
+++ b/css/header.css
@@ -11,7 +11,7 @@ Author URI: balraj.cool
   background-color: black;
   font-family: 'Share Tech Mono', monospace;
   color: white;
-  z-index: 0;
+  z-index: 1;
   position: relative;
 }
 .header-nav-bg-wrapper {    
